<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Activity.ProductDetailsActivity"
    android:id="@+id/scrollViewProduct">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp">

            <ImageView
                android:id="@+id/pda_img"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/sample_product"
                android:layout_centerHorizontal="true"
                android:elevation="@dimen/_15sdp"
                />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pda_img"
                        android:elevation="@dimen/_10sdp">



                        <TextView
                            android:id="@+id/pda_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/open_sans_semibold"
                            android:text="Gaming PC"
                            android:textColor="#000"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/pda_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_below="@+id/pda_name"
                            android:layout_centerHorizontal="true"
                            android:drawableLeft="@drawable/ic_dollar"
                            android:fontFamily="@font/open_sans"
                            android:text="600"
                            android:textColor="#000"
                            android:textSize="@dimen/_15sdp" />

                        <TextView
                            android:id="@+id/pda_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/pda_price"
                            android:fontFamily="@font/open_sans"
                            android:text="PC"
                            android:textColor="#000"
                            android:textSize="@dimen/_15sdp" />

                        <TextView
                            android:id="@+id/pda_manufacturer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/pda_category"
                            android:fontFamily="@font/open_sans"
                            android:text="ASUS"
                            android:textColor="#000"
                            android:textSize="@dimen/_15sdp" />


                        <TextView
                            android:id="@+id/pda_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pda_manufacturer"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/open_sans"
                            android:text="Description Here"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="#000" />



                        <TextView
                            android:id="@+id/pda_ratingTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_below="@+id/pda_desc"
                            android:fontFamily="@font/open_sans"
                            android:text="Rate this product:"
                            android:layout_centerHorizontal="true"
                            android:textColor="#000"
                            android:textSize="@dimen/_15sdp" />


                        <RatingBar
                            android:id="@+id/pda_userRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pda_ratingTitle"
                            android:layout_alignParentRight="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:layout_marginRight="@dimen/_65sdp"
                            android:numStars="5"
                            android:rating="0"
                            android:scaleX="0.4"
                            android:scaleY="0.4" />

                        <Button
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_btn"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/pda_userRating"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Add to Wishlist"
                            android:textAllCaps="false"
                            android:fontFamily="@font/open_sans"
                            android:textColor="#FFF"
                            android:id="@+id/btn_wishlist"/>

                        <Button
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_btn"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/btn_wishlist"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="Add to Cart"
                            android:textAllCaps="false"
                            android:fontFamily="@font/open_sans"
                            android:textColor="#FFF"
                            android:id="@+id/btn_cart"/>

                    </RelativeLayout>



            </RelativeLayout>





</ScrollView>