...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Fragment.CartFragment"
    android:id="@+id/scrollViewCart">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_25sdp"
...
        android:textSize="@dimen/_15sdp"
        android:textColor="#000000"
        android:id="@+id/fa_tv_total"
        />
    <Button

        android:id="@+id/cart_btn_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_btn"
        android:textColor="#FFFFFF"
        android:text="Checkout"
...
