...
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnCashAtDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:text="Pay at delivery"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"
...
