...
            android:text="Purchase History"
            android:fontFamily="@font/open_sans"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:layout_below="@id/btn_editProfile"
            android:id="@+id/btn_viewHistory"/>

        <Button
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
...
            android:layout_centerHorizontal="true"
            android:text="Logout"
            android:fontFamily="@font/open_sans"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:background="@drawable/bg_btn"
            android:id="@+id/btn_logout"
            android:layout_below="@id/btn_aboutUs"/>

    </RelativeLayout>
</ScrollView>
