<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Activity.OrderHistoryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_25sdp"
        android:text="Your Order History"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:fontFamily="@font/open_sans_light"
        android:id="@+id/history_title"
        />
    <androidx.recyclerview.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/recyclerViewOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_4sdp"
        android:background="#FFF"
        android:layout_below="@+id/history_title">
    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>